--- a/src/main/resources/fxml/CreateRoom.fxml
+++ b/src/main/resources/fxml/CreateRoom.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -39,11 +40,7 @@
                   <Insets bottom="25.0" />
                </VBox.margin>
             </TextField>
-            <TextField fx:id="roomType" maxWidth="-Infinity" prefHeight="27.0" prefWidth="225.0" promptText="Room Type">
-               <font>
-                  <Font size="9.0" />
-               </font>
-            </TextField>
+            <ComboBox fx:id="roomType" prefHeight="31.0" prefWidth="225.0" promptText="Room Type" />
             <TextField fx:id="maxCap" maxWidth="-Infinity" prefHeight="27.0" prefWidth="225.0" promptText="Maximum Capacity">
                <font>
                   <Font size="9.0" />
@@ -52,7 +49,7 @@
                   <Insets bottom="10.0" />
                </VBox.margin>
             </TextField>
-            <Button fx:id="createButton" onAction="#CreateRoom" mnemonicParsing="false" text="Create Room" />
+            <Button fx:id="createButton" mnemonicParsing="false" onAction="#CreateRoom" text="Create Room" />
          </children>
       </VBox>
    </children>
