Filter and creating sections

--- a/src/main/resources/fxml/CreateCourse.fxml
+++ b/src/main/resources/fxml/CreateCourse.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,8 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="430.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateCourseController">
+<AnchorPane prefHeight="430.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateCourseController">
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="419.0" prefWidth="339.0" styleClass="background-panel" stylesheets="@../styles/styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
@@ -29,19 +32,19 @@
                      <children>
                         <VBox>
                            <children>
-                              <Label styleClass="label-light" text="Department" underline="true" />
+                              <Label styleClass="label-light" text="Department" />
                                     <TextField fx:id="courseName" maxWidth="100.0" prefHeight="27.0" prefWidth="100.0" promptText="Department" />
                            </children>
                         </VBox>
                         <VBox>
                            <children>
-                              <Label styleClass="label-light" text="Course Number" underline="true" />
+                              <Label styleClass="label-light" text="Course Number" />
                                     <TextField fx:id="courseNumber" maxWidth="-Infinity" prefHeight="27.0" prefWidth="100.0" promptText="Course Number" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
-                  <Label maxWidth="-Infinity" prefWidth="225.0" styleClass="label-light" text="Course Name" underline="true">
+                  <Label maxWidth="-Infinity" prefWidth="225.0" styleClass="label-light" text="Course Name">
                      <VBox.margin>
                         <Insets bottom="-10.0" />
                      </VBox.margin>
@@ -70,7 +73,7 @@
                   </VBox>
                   <VBox fx:id="courseComponents" alignment="CENTER" maxWidth="225.0" prefHeight="26.0" prefWidth="225.0" spacing="10.0" style="-fx-border-radius: 2; -fx-border-color: white; -fx-border-style: dashed; -fx-border-width: 2px;">
                      <children>
-                        <Label prefWidth="225.0" styleClass="label-light" text="Course Components" underline="true" />
+                        <Label prefWidth="225.0" styleClass="label-light" text="Course Components" />
                         <Button mnemonicParsing="false" onAction="#addComponent" prefWidth="93.0" text="Add Component" />
                      </children>
                      <padding>
