--- a/src/main/resources/fxml/CreateSection.fxml
+++ b/src/main/resources/fxml/CreateSection.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
@@ -20,24 +21,53 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="626.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateSectionController">
+<AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="507.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateSectionController">
    <children>
-      <Text fill="WHITE" layoutX="185.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="page-title" text="Create a new Section">
-         <font>
-            <Font name="System Bold" size="36.0" />
-         </font>
-      </Text>
-      <VBox alignment="TOP_CENTER" layoutY="55.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="181.0" prefWidth="626.0" spacing="20.0" AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="55.0">
-         <children>
-            <ComboBox prefHeight="27.0" prefWidth="399.0" promptText="Course" style="-fx-background-color: white;" />
-            <Text fx:id="addComponent" fill="#f2f5fc" onMouseClicked="#onAddComponent" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new component" />
-      
-         </children>
-         <padding>
-            <Insets top="10.0" />
-         </padding>
-      </VBox>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="34.0" layoutX="250.0" layoutY="167.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="126.0" />
-      <Text fill="#544f4f" layoutX="294.0" layoutY="188.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create" />
+      <ScrollPane hbarPolicy="NEVER" prefHeight="586.0" prefWidth="509.0" styleClass="background-panel" stylesheets="@../styles/styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <effect>
+            <Blend />
+         </effect>
+         <content>
+            <VBox alignment="TOP_CENTER" prefHeight="584.0" prefWidth="506.0" spacing="20.0" styleClass="background-panel">
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+               <children>
+                  <Text fill="#fffafa" strokeType="OUTSIDE" strokeWidth="0.0" text="Create a Section">
+                     <font>
+                        <Font name="Avenir Roman" size="24.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </Text>
+                  <ComboBox prefHeight="27.0" prefWidth="246.0" promptText="Course">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                  </ComboBox>
+                  <VBox fx:id="vBox" alignment="TOP_CENTER" maxWidth="357.0" prefHeight="387.0" prefWidth="357.0" spacing="10.0" styleClass="background-panel">
+                     <children>
+                        <Text fill="#f2f2f2" onMouseClicked="#onAddComponent" strokeType="OUTSIDE" strokeWidth="0.0" text="Add a new section">
+                           <font>
+                              <Font name="Avenir Oblique" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Text>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
+                  <Button mnemonicParsing="false" text="Create Section(s)">
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin></Button>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
