--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import java.lang.Double?>
 <?import java.lang.String?>
 <?import javafx.scene.Group?>
@@ -23,7 +30,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="725.0" prefWidth="1200.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.SchedulerController">
    <children>
       <MenuBar prefHeight="29.0" prefWidth="1200.0" styleClass="menu">
         <menus>
@@ -139,7 +146,11 @@
                               <Font name="Avenir Roman" size="13.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="filterField" layoutX="-352.0" layoutY="-384.0" />
+                        <TextField fx:id="filterField" layoutX="-352.0" layoutY="-390.0" onKeyPressed="#enterPressedOnFilter" promptText="Filter" />
+                        <HBox fx:id="filterHBox" layoutX="-169.0" layoutY="-393.0" prefHeight="34.0" prefWidth="498.0" spacing="5.0">
+                           <padding>
+                              <Insets right="5.0" />
+                           </padding></HBox>
                      </children>
                   </Group>
                   <Group fx:id="calendarGroup" layoutX="-256.0" layoutY="-43.0" visible="false">
@@ -195,17 +206,16 @@
                   </Group>
                   <Group fx:id="listGroup">
                      <children>
-                        <TableView fx:id="listTable" layoutX="-1.0" layoutY="94.0" prefHeight="535.0" prefWidth="680.0">
+                        <TableView fx:id="listTable" layoutY="94.0" prefHeight="534.0" prefWidth="675.0">
                           <columns>
-                            <TableColumn fx:id="sectionNameColumn" editable="false" prefWidth="136.0" styleClass="table-column" text="Course" />
-                            <TableColumn fx:id="profColumn" prefWidth="136.0" styleClass="table-column" text="Prof." />
-                              <TableColumn fx:id="timeColumn" prefWidth="136.0" styleClass="table-column" text="Time" />
-                              <TableColumn fx:id="roomColumn" prefWidth="136.0" styleClass="table-column" text="Room" />
-                              <TableColumn fx:id="sectionTypeColumn" prefWidth="136.0" styleClass="table-column" text="Type" />
+                            <TableColumn fx:id="sectionNameColumn" prefWidth="135.0" text="Course" />
+                            <TableColumn fx:id="profColumn" prefWidth="135.0" text="Prof" />
+                              <TableColumn fx:id="timeColumn" prefWidth="135.0" text="Time" />
+                              <TableColumn fx:id="roomColumn" prefWidth="135.0" text="Room" />
+                              <TableColumn fx:id="sectionTypeColumn" prefWidth="135.0" text="Type" />
                           </columns>
                         </TableView>
-                     </children>
-                  </Group>
+                     </children></Group>
                </children>
             </AnchorPane>
          </children>
@@ -223,17 +233,17 @@
       </Group>
       <Group layoutX="1039.0" layoutY="27.0">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="34.0" layoutX="-100.0" layoutY="9.0" onMouseClicked="#onExpandFeedback" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="154.0" />
-            <Text fx:id="closeFeedback" fill="WHITE" layoutX="-97.0" layoutY="32.0" onMouseClicked="#onExpandFeedback" strokeType="OUTSIDE" strokeWidth="0.0" text="Close Feedback" textAlignment="CENTER" wrappingWidth="145.21299743652344">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#79879a" height="34.0" layoutX="-103.0" layoutY="9.0" onMouseClicked="#onExpandFeedback" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="154.0" />
+            <Text fx:id="closeFeedback" fill="WHITE" layoutX="-103.0" layoutY="32.0" onMouseClicked="#onExpandFeedback" strokeType="OUTSIDE" strokeWidth="0.0" text="Close Feedback" textAlignment="CENTER" wrappingWidth="145.21299743652344">
                <font>
                   <Font name="Avenir Roman" size="17.0" />
                </font>
             </Text>
          </children>
       </Group>
-      <Group layoutX="260.0" layoutY="110.0">
+      <Group layoutX="825.0" layoutY="120.0">
          <children>
-            <Polygon fill="#36465d" layoutY="5.0" rotate="-90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
+            <Polygon fill="#36465d" layoutX="-560.0" layoutY="3.0" rotate="-90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
               <points>
                 <Double fx:value="-50.0" />
                 <Double fx:value="40.0" />
@@ -243,11 +253,7 @@
                 <Double fx:value="-60.0" />
               </points>
             </Polygon>
-         </children>
-      </Group>
-      <Group layoutX="825.0" layoutY="120.0">
-         <children>
-            <Polygon fill="#36465d" layoutX="54.0" layoutY="11.0" rotate="90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
+            <Polygon fill="#36465d" layoutX="54.0" layoutY="3.0" rotate="90.0" scaleX="0.35" scaleY="0.35" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0">
                <points>
                   <Double fx:value="-50.0" />
                   <Double fx:value="40.0" />
