--- a/src/main/resources/fxml/CreateAccount.fxml
+++ b/src/main/resources/fxml/CreateAccount.fxml
@@ -45,6 +45,22 @@
                    </ChoiceBox>
                </children>
             </HBox>
+            <HBox alignment="CENTER" spacing="25.0">
+               <children>
+                  <VBox>
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="96.0" styleClass="label-light" text="First Name" />
+                        <TextField fx:id="firstNameField" maxWidth="131.0" prefHeight="27.0" prefWidth="131.0" promptText="First Name" />
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="53.0" prefWidth="141.0">
+                     <children>
+                        <Label styleClass="label-light" text="Last Name" />
+                        <TextField fx:id="lastNameField" maxWidth="-Infinity" prefHeight="27.0" prefWidth="141.0" promptText="Last Name" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
             <TextField fx:id="usernameField" prefHeight="25.0" prefWidth="261.0" promptText="Username">
                <VBox.margin>
                   <Insets bottom="5.0" />
