Populating courses in CreateSectionController

--- a/src/main/resources/fxml/CreateSection.fxml
+++ b/src/main/resources/fxml/CreateSection.fxml
@@ -41,7 +41,7 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                   </Text>
-                  <ComboBox prefHeight="27.0" prefWidth="246.0" promptText="Course">
+                  <ComboBox fx:id="comboBox" prefHeight="27.0" prefWidth="246.0" promptText="Course">
                      <VBox.margin>
                         <Insets bottom="10.0" />
                      </VBox.margin>
