--- a/src/main/resources/fxml/CreateCourse.fxml
+++ b/src/main/resources/fxml/CreateCourse.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -14,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="430.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateCourseController">
+<AnchorPane prefHeight="430.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.CreateCourseController">
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="419.0" prefWidth="339.0" styleClass="background-panel" stylesheets="@../styles/styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
@@ -33,7 +29,7 @@
                         <VBox>
                            <children>
                               <Label styleClass="label-light" text="Department" />
-                                    <TextField fx:id="courseName" maxWidth="100.0" prefHeight="27.0" prefWidth="100.0" promptText="Department" />
+                                    <TextField fx:id="department" maxWidth="100.0" prefHeight="27.0" prefWidth="100.0" promptText="Department" />
                            </children>
                         </VBox>
                         <VBox>
@@ -49,7 +45,7 @@
                         <Insets bottom="-10.0" />
                      </VBox.margin>
                   </Label>
-                        <TextField fx:id="courseType" maxWidth="225.0" prefWidth="225.0" promptText="Course Name" />
+                        <TextField fx:id="courseName" maxWidth="225.0" prefWidth="225.0" promptText="Course Name" />
                   <VBox maxWidth="-Infinity" prefWidth="225.0" spacing="10.0">
                      <children>
                         <Label styleClass="label-light" text="Prerequisite(s)" underline="true">
