--- a/src/main/resources/fxml/CourseComponentTemplate.fxml
+++ b/src/main/resources/fxml/CourseComponentTemplate.fxml
@@ -18,7 +18,7 @@
                <children>
                   <VBox alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="215.0" spacing="10.0">
                      <children>
-                        <Label fx:id="componentType" maxWidth="-Infinity" prefWidth="210.0" text="Component">
+                        <Label maxWidth="-Infinity" prefWidth="210.0" text="Component">
                            <styleClass>
                               <String fx:value="label-light" />
                               <String fx:value="label-bold" />
@@ -30,7 +30,7 @@
                         <HBox alignment="CENTER" spacing="5.0">
                            <children>
                               <Label prefWidth="100.0" styleClass="label-light" text="Component Type" underline="true" />
-                              <TextField prefWidth="100.0" />
+                              <TextField fx:id="componentType" prefWidth="100.0" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" prefWidth="225.0" spacing="5.0">
