--- a/src/main/resources/fxml/AddRoomType.fxml
+++ b/src/main/resources/fxml/AddRoomType.fxml
@@ -2,28 +2,53 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="201.0" prefWidth="301.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.AddRoomTypeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="201.0" prefWidth="280.0" styleClass="background-panel" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.swp.scheduler.AddRoomTypeController">
    <children>
-      <VBox layoutX="31.0" layoutY="14.0" prefHeight="39.0" prefWidth="240.0">
+      <VBox layoutX="53.0" layoutY="14.0" prefHeight="39.0" prefWidth="174.0">
          <children>
-            <Label styleClass="page-title" text="Add new Room Type" textFill="WHITE">
+            <Label prefHeight="35.0" prefWidth="177.0" styleClass="page-title" text="Add New Type" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
          </children>
       </VBox>
-      <Button fx:id="addRoomTypeButton" layoutX="93.0" layoutY="150.0" mnemonicParsing="false" onAction="#addRoomType" text="Add Room Type" />
-      <VBox layoutX="50.0" layoutY="71.0" prefHeight="53.0" prefWidth="202.0">
+      <Button fx:id="addRoomTypeButton" layoutX="95.0" layoutY="143.0" mnemonicParsing="false" onAction="#addRoomType" text="Add Type" />
+      <VBox layoutX="32.0" layoutY="53.0" prefHeight="53.0" prefWidth="202.0">
          <children>
-            <Label styleClass="label-light" text="Room Type" />
-            <TextField fx:id="roomType" onKeyPressed="#enterPressed" prefHeight="31.0" prefWidth="203.0" promptText="Room Type" />
+            <Label styleClass="label-light" text="Room/Course Type" />
+            <TextField fx:id="roomType" onKeyPressed="#enterPressed" prefHeight="31.0" prefWidth="203.0" promptText="Room/Course Type" />
          </children>
       </VBox>
+      <HBox layoutX="40.0" layoutY="106.0" prefHeight="31.0" prefWidth="200.0">
+         <children>
+            <RadioButton fx:id="room" mnemonicParsing="false" text="Room" textFill="WHITE">
+               <font>
+                  <Font size="12.0" />
+               </font>
+               <toggleGroup>
+                  <ToggleGroup fx:id="type" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="course" mnemonicParsing="false" text="Course" textFill="WHITE" toggleGroup="$type" translateX="5.0">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </RadioButton>
+            <RadioButton fx:id="both" mnemonicParsing="false" text="Both" textFill="WHITE" toggleGroup="$type" translateX="10.0">
+               <font>
+                  <Font size="12.0" />
+               </font>
+            </RadioButton>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
