--- a/src/main/resources/fxml/CreateCourse.fxml
+++ b/src/main/resources/fxml/CreateCourse.fxml
@@ -70,13 +70,13 @@
                   <VBox fx:id="courseComponents" alignment="CENTER" maxWidth="225.0" prefHeight="26.0" prefWidth="225.0" spacing="10.0" style="-fx-border-radius: 2; -fx-border-color: white; -fx-border-style: dashed; -fx-border-width: 2px;">
                      <children>
                         <Label prefWidth="225.0" styleClass="label-light" text="Course Components" />
-                        <Button mnemonicParsing="false" onAction="#addComponent" prefWidth="93.0" text="Add Component" />
+                        <Button mnemonicParsing="false" onAction="#addComponent" prefHeight="23.0" prefWidth="134.0" text="Add Another Component" />
                      </children>
                      <padding>
                         <Insets bottom="10.0" top="5.0" />
                      </padding>
                   </VBox>
-                        <Button fx:id="createButton" mnemonicParsing="false" onAction="#CreateCourse" onMouseClicked="#CreateCourse" prefWidth="153.0" text="Create Course">
+                        <Button fx:id="createButton" mnemonicParsing="false" onAction="#CreateCourse" onMouseClicked="#CreateCourse" prefHeight="23.0" prefWidth="176.0" text="Create Course">
                      <VBox.margin>
                         <Insets bottom="20.0" />
                      </VBox.margin>
