--- a/src/main/resources/fxml/CourseComponentTemplate.fxml
+++ b/src/main/resources/fxml/CourseComponentTemplate.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,15 +19,20 @@
                <children>
                   <VBox alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="215.0" spacing="10.0">
                      <children>
-                        <Label maxWidth="-Infinity" prefWidth="210.0" text="Component">
-                           <styleClass>
-                              <String fx:value="label-light" />
-                              <String fx:value="label-bold" />
-                           </styleClass>
+                        <HBox alignment="CENTER">
                            <VBox.margin>
-                              <Insets bottom="-10.0" />
+                              <Insets />
                            </VBox.margin>
-                        </Label>
+                           <children>
+                              <Label maxWidth="-Infinity" prefWidth="210.0" text="Component">
+                                 <styleClass>
+                                    <String fx:value="label-light" />
+                                    <String fx:value="label-bold" />
+                                 </styleClass>
+                              </Label>
+                              <Button fx:id="removeButton" mnemonicParsing="false" onAction="#onRemove" text="X" />
+                           </children>
+                        </HBox>
                         <HBox alignment="CENTER" spacing="5.0">
                            <children>
                               <Label prefWidth="100.0" styleClass="label-light" text="Component Type" underline="true" />
