--- a/src/main/resources/fxml/SectionComponentTemplate.fxml
+++ b/src/main/resources/fxml/SectionComponentTemplate.fxml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="264.0" prefWidth="253.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="264.0" prefWidth="253.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="264.0" prefWidth="253.0" style="-fx-background-color: #79879a;" stylesheets="@../styles/styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="258.0" prefWidth="253.0">
                <children>
-                  <Text fill="#ebe8e8" strokeType="OUTSIDE" strokeWidth="0.0" text="Section">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
+                  <HBox alignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" />
                      </VBox.margin>
-                  </Text>
+                     <children>
+                        <Text fill="#ebe8e8" strokeType="OUTSIDE" strokeWidth="0.0" text="     Section" textAlignment="CENTER" wrappingWidth="213.984375">
+                           <font>
+                              <Font size="16.0" />
+                           </font>
+                        </Text>
+                        <Button mnemonicParsing="false" onAction="#onRemove" text="X">
+                           <HBox.margin>
+                              <Insets top="-20.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
                   <ComboBox fx:id="sectionType" prefHeight="27.0" prefWidth="188.0" promptText="Section Type">
                      <VBox.margin>
                         <Insets bottom="5.0" top="5.0" />
