--- a/src/main/resources/fxml/Scheduler.fxml
+++ b/src/main/resources/fxml/Scheduler.fxml
@@ -203,12 +203,16 @@
                      <children>
                         <TableView fx:id="listTable" layoutY="94.0" prefHeight="534.0" prefWidth="675.0">
                           <columns>
-                            <TableColumn fx:id="sectionNameColumn" prefWidth="135.0" text="Course" />
-                            <TableColumn fx:id="profColumn" prefWidth="135.0" text="Prof" />
-                              <TableColumn fx:id="timeColumn" prefWidth="135.0" text="Time" />
-                              <TableColumn fx:id="roomColumn" prefWidth="135.0" text="Room" />
-                              <TableColumn fx:id="sectionTypeColumn" prefWidth="135.0" text="Type" />
+                            <TableColumn fx:id="sectionNameColumn" prefWidth="95.0" text="Course" />
+                            <TableColumn fx:id="profColumn" prefWidth="123.0" text="Prof" />
+                              <TableColumn fx:id="startTimeColumn" prefWidth="99.0" text="Start Time" />
+                              <TableColumn fx:id="endTimeColumn" prefWidth="116.0" text="End Time" />
+                              <TableColumn fx:id="roomColumn" prefWidth="74.0" text="Room" />
+                              <TableColumn fx:id="sectionTypeColumn" prefWidth="303.0" text="Type" />
                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                         </TableView>
                      </children></Group>
                </children>
