--- a/src/main/resources/fxml/CreateRoom.fxml
+++ b/src/main/resources/fxml/CreateRoom.fxml
@@ -16,40 +16,60 @@
          <children>
             <Label styleClass="page-title" text="Create a new Room" textFill="#606060">
                <VBox.margin>
-                  <Insets bottom="10.0" />
+                  <Insets top="10.0" />
                </VBox.margin></Label>
             <HBox alignment="CENTER" spacing="25.0">
                <children>
-                  <TextField fx:id="buildNum" maxWidth="-Infinity" prefHeight="27.0" prefWidth="100.0" promptText="Building Number">
-                     <font>
-                        <Font size="9.0" />
-                     </font>
-                  </TextField>
-                  <TextField fx:id="roomNum" maxWidth="-Infinity" prefHeight="27.0" prefWidth="100.0" promptText="Room Number">
+                  <VBox>
+                     <children>
+                        <Label styleClass="label-light" text="Building Number" textFill="#606060" />
+                        <TextField fx:id="buildNum" maxWidth="-Infinity" prefHeight="27.0" prefWidth="100.0" promptText="Building Number">
+                           <font>
+                              <Font size="9.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </VBox>
+                  <VBox>
+                     <children>
+                        <Label styleClass="label-light" text="Room Number" textFill="#606060" />
+                        <TextField fx:id="roomNum" maxWidth="-Infinity" prefHeight="27.0" prefWidth="100.0" promptText="Room Number">
+                           <font>
+                              <Font size="9.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <VBox alignment="CENTER">
+               <VBox.margin>
+                  <Insets bottom="25.0" />
+               </VBox.margin>
+               <children>
+                  <Label maxWidth="-Infinity" minWidth="-Infinity" prefWidth="225.0" styleClass="label-light" text="Attributes" textFill="#606060" />
+                  <TextField fx:id="attributes" maxWidth="-Infinity" prefHeight="27.0" prefWidth="225.0" promptText="Attributes">
                      <font>
                         <Font size="9.0" />
                      </font>
                   </TextField>
                </children>
-            </HBox>
-            <TextField fx:id="attributes" maxWidth="-Infinity" prefHeight="27.0" prefWidth="225.0" promptText="Attributes">
-               <font>
-                  <Font size="9.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="25.0" />
-               </VBox.margin>
-            </TextField>
+            </VBox>
             <ComboBox fx:id="roomType" onMouseClicked="#roomTypePressed" prefHeight="31.0" prefWidth="225.0" promptText="Room Type" translateY="-16.0" />
             <Button fx:id="roomTypeButton" mnemonicParsing="false" onAction="#roomTypeButtonPressed" text="New Room Type" translateY="-16.0" />
-            <TextField fx:id="maxCap" maxWidth="-Infinity" prefHeight="27.0" prefWidth="225.0" promptText="Maximum Capacity" translateY="-5.0">
-               <font>
-                  <Font size="9.0" />
-               </font>
+            <VBox alignment="CENTER" spacing="5.0">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
-            </TextField>
+               <children>
+                  <Label prefHeight="17.0" prefWidth="225.0" styleClass="label-light" text="Maximum Capacity" />
+                  <TextField fx:id="maxCap" maxWidth="-Infinity" prefHeight="27.0" prefWidth="225.0" promptText="Maximum Capacity" translateY="-5.0">
+                     <font>
+                        <Font size="9.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </VBox>
             <Button fx:id="createButton" mnemonicParsing="false" onAction="#createRoom" text="Create Room" translateY="-10.0" />
          </children>
       </VBox>
